--- a/TuneHub/src/app/Components/Users/musicians/musicians.component.html
+++ b/TuneHub/src/app/Components/Users/musicians/musicians.component.html
@@ -1,57 +1,32 @@
 <div>
     <h3>
-        Find Musicians 🎤
+        Find Musicians
         Connect with talented professionals for your next project
+        Join Network
     </h3>
-    <p class="join-network">
-        <button class="contact-btn">
-            👥 Join Network
-        </button>
-    </p>
 </div>
 
----
-
-@if(users.length === 0){
-<p class="have-no-users">
-    <b>There are currently no users to display.</b><br>
+@if(users.length===0){
+<p class="have-no-users"><b>There are currently no users to display.</b><br>
     Add new users to manage your work efficiently and neatly.<br><br>
-    Take advantage of this tool to organize your day in the best way and achieve the goals you have set for yourself
+
+    Take advantage of this tool to organize your day in the best way and achieve the goals you have set for yourself<br>
 </p>
-} @else {
+} 
+ @else{
 
 <div class="musicians-container">
     @for(u of users; track $index){
-    <div class="producer-card" (click)="showDetails(u)">
-        
-        <div class="header">
-            <div class="profile-pic" [style.backgroundImage]="'url(' + getImageUrl(u.profile!.imageProfilePath) + ')'">
-            </div>
-            
-            <div class="info">
-                <h3>{{ u.profile!.name }}</h3>
-                
-                <div class="rating-location">
-                    <span>{{ u.description }}</span>
-                </div>
-                
-                <div class="rating-location">
-                    📍 {{ u.city }}, {{ u.country }}
-                </div>
-            </div>
-        </div>
-        
-     
-
-        <div class="buttons-row">
-            <button class="contact-btn">
-                💬 Contact
-            </button>
-            <button class="icon-btn">
-                👥
-            </button>
-        </div>
+    <div (click)="showDetails(u)">
+        <h3>name {{u.profile!.name}}</h3>  
+        <h3>description {{u.description}}</h3>
+        <h3>city {{u.city}}</h3>
+        <h3>country {{u.country}}</h3>
+        <div class="image-p">
+        <img [src]="getImageUrl(u.profile!.imageProfilePath)"
+              class="profile-image">
+              </div>
     </div>
     }
 </div>
-}
+} 
