--- a/TuneHub/src/app/Components/Users/user-profile/user-profile.component.html
+++ b/TuneHub/src/app/Components/Users/user-profile/user-profile.component.html
@@ -1,1 +1,57 @@
-<p>user-profile works!</p>
+<!-- <br><br><br><br><br><br><br><br><br><br><br>
+<div class="profile-container">
+  
+  <header class="profile-header">
+    <div class="back-link">
+      <span class="back-arrow" (click)="goBack()">← Back to TuneHub</span>
+    </div>
+    @if (isCurrentUserProfile) {
+      <button class="edit-profile-btn" (click)="editProfile()">
+        Edit Profile
+      </button>
+    }
+  </header>
+
+  <section class="profile-card">
+    
+  <div class="cover-image-wrapper">
+      @if (profileData?.coverImagePath) {
+        <img [src]="profileData.coverImagePath" alt="Cover Image" class="cover-image">
+      }
+    </div> -->
+
+    <!-- <div class="profile-info-section">
+      
+      <div class="profile-picture-wrapper"> -->
+        <!-- <img [src]="profileData?.imageProfilePath" alt="Profile Picture" class="profile-image"> -->
+        <!-- <span class="rating-star">⭐</span>
+      </div>
+
+      <div class="user-details">
+        <h2>{{ profileData?.name }}</h2>
+        <p class="handle">@{{ profileData?.handle }}</p>
+         -->
+        <!-- <div class="contact-details">
+          @if (profileData?.city && profileData?.country) {n
+            <span class="location-icon">📍</span>
+            <span class="location">{{ profileData.city }}, {{ profileData.country }}</span>
+          }
+          @if (profileData?.website) {
+            <span class="website-icon">🔗</span>
+            <a [href]="profileData.website" target="_blank">{{ profileData.website }}</a>
+          }
+        </div> -->
+      <!-- </div>
+
+      <div class="action-buttons">
+        <button class="message-btn" (click)="sendMessage()">
+          Message
+        </button>
+        <button class="follow-btn" (click)="followUser()">
+          {{ isFollowing ? 'Unfollow' : 'Follow' }}
+        </button>
+      </div>
+    </div>
+  </section>
+  
+  </div> --> 
