--- a/TuneHub/src/app/Components/Shared/header/header.component.css
+++ b/TuneHub/src/app/Components/Shared/header/header.component.css
@@ -126,25 +126,12 @@ header::after {
   width: 100%;
   height: 100%;
   /* הצל הדרמטי */
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 50%);
+  /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 50%); */
   pointer-events: none;
   /* לא חוסם אינטראקציה */
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  cursor: pointer;
-}
 
-.logo img {
-  height: 50px;
-  width: auto;
-  border-radius: 13.5px;
-  margin-left: 22px;
-  margin-right: 7px;
-}
 
 .menu-icon {
 
@@ -287,17 +274,16 @@ header {
   border-radius: 0 0 45px 45px;
   
   
-  /* background: rgba(0,0,0,0.55);   חצי שקוף */
-    background-color: rgba(29, 42, 59, 0.55); /* חצי שקוף */
+  background: rgba(0,0,0,0.55);
+    background-color: rgba(29, 42, 59, 0.937); /* חצי שקוף */
   -webkit-backdrop-filter: blur(12px);
 
   backdrop-filter: blur(12px);
   
+  
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.1);   /* קו לבן דק ושקוף */
 }
-
-
 
 
 
